--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,18 @@ div.encabezado{
   font-family:Georgia, serif;
   font-size: 36px;
   text-align: center;
-  background-image: url("./../guesteaus.png");
+  background-image: url("./../imgs/guesteaus.png");
 }
+
+div.menu ul, a, li{
+  background-color: #a77e58;
+  color: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+}
+div.menu a:hover{
+  color: #8b6f47;
+}
+
 
 
