Cuarto problema del ejercicio 1

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,5 +22,11 @@ div.menu a:hover{
   color: #8b6f47;
 }
 
+div.contenido{
+  background-color: #fff8f0;
+  color: #5a3e36;
+  font-family: Georgia, serif;
+  font-size: 18px;
+}
 
 
