--- a/css/estilos.css
+++ b/css/estilos.css
@@ -27,7 +27,6 @@ div.contenido{
   color: #5a3e36;
   font-family: Georgia, serif;
   font-size: 18px;
-  float: left; width: 660px; margin: 20px; 
 }
 
 div.sidebar{
@@ -35,7 +34,14 @@ div.sidebar{
   color: #5a3e36;
   font-family: Georgia, serif;
   font-size: 18px;
-  float:right;width:220px;margin:20px 0px;padding:20px;
+}
+
+div.pie{
+  background-color: #a77e58;
+  color: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  text-align: center;
 }
 
 
