--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,11 +5,14 @@
 }
 
 div.encabezado{
-  color: #5a3e36;
+  color: #492a22;
   font-family:Georgia, serif;
   font-size: 36px;
   text-align: center;
-  background-image: url("./../imgs/guesteaus.png");
+  background-image: url("./../imgs/guesteaus.png");  
+  background-position: center;
+  background-size: cover;
+  padding: 70px;
 }
 
 div.menu ul, a, li{
