--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,11 +40,19 @@ div.sidebar{
 }
 
 div.pie{
-  background-color: #a77e58;
-  color: #ffffff;
+  background-color: #5a3e36;
+  color: #ecdcc6;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   text-align: center;
+}
+div.pie a{
+  margin: 30px;
+  background-color: #5a3e36;
+  color: #ecdcc6;
+}
+div.pie a:hover{
+  color: #8b6f47;
 }
 
 
