--- a/css/estilos.css
+++ b/css/estilos.css
@@ -62,5 +62,25 @@ div.pie a:hover{
   text-decoration: none;
 }
 
+input[type='text'],input[type='email'],input[type='tel']{
+  border-color: #a77e58;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #fff8f0;
+}
+input[type='submit']{
+  background-color: #5a3e36;
+  color: #ffffff;
+  padding: 12px;
+  border-radius: 5px;
+}
+input[type='submit']:hover{
+  background-color:#a77e58;
+}
+label{
+  font-size: 16px;
+  display:block;
+}
+
 
 
