--- a/css/estilos.css
+++ b/css/estilos.css
@@ -20,6 +20,7 @@ div.menu ul, a, li{
   color: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
+  transition: color.5s ease;
 }
 div.menu a:hover{
   color: #8b6f47;
